--- a/durham-drives/config.toml
+++ b/durham-drives/config.toml
@@ -18,9 +18,8 @@ theme = "hugo-serif-theme"
     meta_description = "Providing transportation to and from the polls"
     meta_og_title = "Durham Drives"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-serif.netlify.app"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-serif-theme/master/images/tn.png"
-    meta_og_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
+    meta_og_url = "https://durham-drives.netlify.app"
+    meta_og_description = "Durham Drives is helping to privde transportation to and from the polls"
     meta_twitter_card = "summary"
 
 [menu]
