--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-serif-theme"]
         path = themes/hugo-serif-theme
-        url = git@github.com:zerostaticthemes/hugo-serif-theme.git
+        url = https://github.com/zerostaticthemes/hugo-serif-theme.git
