--- a/config.toml
+++ b/config.toml
@@ -9,8 +9,8 @@ theme = "hugo-serif-theme"
     show_call_box = true
 
   [params.logo]
-    mobile = "images/logo/logo-mobile.svg"
-    desktop = "images/logo/logo.svg"
+    mobile = "images/logo/mobile_logo.png"
+    desktop = "images/logo/logo.png"
     desktop_height = "36px"
     alt = "Durham Drives"
 
